syntax = "proto3";

package example.complex;

option go_package = "github.com/samme4life/proto-go-course/proto";

message Dummy {
    int32 id = 1;
    string name = 2;
}

message Complex {
    Dummy one_dummy = 1;
    repeated Dummy multiple_dummies = 2;
}