syntax = "proto3";

package example.proto;

option go_package = "github.com/samme4life/proto-go-course/proto";

message Simple {
  uint32 id = 1;
  bool is_simple = 2;
  string name = 3;
  repeated int32 sample_lists = 4;
}